<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="com.a90ms.searchbook.ui.MainViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.MainActivity">

        <TextView
            android:id="@+id/tv_empty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_empty"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/til_search" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_book"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:clipToPadding="false"
            android:paddingTop="80dp"
            android:paddingBottom="10dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toTopOf="@id/tv_count"
            app:layout_constraintTop_toTopOf="parent"
            tools:itemCount="10"
            tools:listitem="@layout/item_book" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_top"
            bindSingleClick="@{() -> vm.onClickTop()}"
            bindVisible="@{vm.showTopButton}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="20dp"
            android:backgroundTint="@color/white"
            android:contentDescription="@string/description_scroll_top"
            android:src="@drawable/ic_icon_action_top"
            app:borderWidth="0dp"
            app:fabSize="mini"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_search"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/sr_gray74_all6"
            android:drawableStart="@drawable/ic_search_h_16"
            app:boxBackgroundColor="@color/gray_f8"
            app:boxCornerRadiusBottomEnd="6dp"
            app:boxCornerRadiusBottomStart="6dp"
            app:boxCornerRadiusTopEnd="6dp"
            app:boxCornerRadiusTopStart="6dp"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:endIconDrawable="@drawable/ic_icon_action_delete"
            app:endIconMode="clear_text"
            app:endIconTint="@color/gray_060"
            app:hintEnabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tie_search"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/edit_hint_search"
                android:imeOptions="actionSearch"
                android:inputType="text"
                android:maxLines="1"
                android:paddingVertical="0dp"
                android:paddingStart="12dp"
                android:text="@={vm.searchQuery}"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="14dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tv_count"
            style="@style/TextAppearance.MaterialComponents.Caption"
            bindIntValue="@{vm.maxCount}"
            bindPrefix="@{true}"
            bindUnit="@{`TotalItems : `}"
            bindVisible="@{vm.maxCount!=null &amp;&amp; vm.maxCount > 0}"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:padding="20dp"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="TotalItems : 100" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>